# rancher-ai-agent

./: ARCHITECTURE.md  CONTRIBUTING.md  README.md  openapi.yaml  pyproject.toml
.github/: renovate.json
.github/workflows/: fossa.yml  publish-chart.yml  release.yml  run-tests.yml  sync-milestones.yml
app/: constants.py  main.py
app/controllers/: ai_agent_config.py
app/routers/: chat.py  configuration.py  llm.py  websocket.py
app/services/: auth.py  memory.py
app/services/agent/: __init__.py  base.py  child.py  factory.py  loader.py  parent.py  root.py  supervisor.py  system_prompts.py
app/services/agent/middleware/: __init__.py  _constants.py  cancel_human_validation.py  human_validation.py  identity_preamble.py  inject_kwargs.py  messages_history.py  ui_tools.py
app/services/ui_tools/: README.md  loader.py  models.py  selector.py  validator.py
chart/agent/: values.yaml
chart/agent/templates/: ai-agent-deployment.yaml
chart/agent/templates/rbac/: agent-sa.yaml  user-global-role.yaml
crd-generation/: go.mod  go.sum
package/: Dockerfile
tests/integration/: test_multi_agent.py  test_single_agent.py
tests/unit/controllers/: test_ai_agent_config.py
tests/unit/routers/: test_chat.py  test_router_llm.py  test_websocket.py
tests/unit/services/agent/: test_base_agent.py  test_child_agent.py  test_factory.py  test_memory.py  test_supervisor_agent.py
tests/unit/services/agent/middleware/: test_cancel_human_validation.py  test_human_validation.py  test_identity_preamble.py  test_inject_kwargs.py  test_messages_history.py  test_ui_tools.py
tests/unit/services/ui_tools/: test_ui_tools_loader.py  test_ui_tools_selector.py  test_ui_tools_validator.py
