[project]
name = "rancher-ai-agent"
version = "0.1.0"
description = "Rancher AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio==4.0.0",
    "fastapi[standard]==0.135.1",
    "langchain==1.2.15",
    "langchain-google-genai==4.2.1",
    "langchain-mcp-adapters==0.2.1",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.14",
    "langchain-text-splitters==1.1.2",
    "langchain-community==0.4.2",
    "langfuse==3.14.5",
    "langgraph==1.1.9",
    "langgraph-checkpoint-postgres==3.0.4",
    "mcp==1.26.0",
    "unstructured==0.21.5",
    "unstructured[md]==0.21.5",
    "numpy==2.4.2",
    "langchain-chroma==1.1.0",
    "kubernetes==35.0.0",
    "fastmcp==3.2.0",
    "langchain-aws==1.3.1",
    "psycopg[binary,pool]==3.3.3",
    "kopf==1.43.0",
    "boto3==1.42.61",
]

[dependency-groups]
test = [
    "testcontainers==4.14.1",
    "mock==5.2.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:HTTPResponse.getheaders\\(\\) is deprecated:DeprecationWarning:kubernetes.client.rest",
]
