[project]
name = "rancher-ai-agent"
version = "0.1.0"
description = "Rancher AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio==4.0.0",
    "fastapi[standard]==0.136.3",
    "langchain==1.2.15",
    "langchain-google-genai==4.2.5",
    "langchain-mcp-adapters==0.3.0",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.14",
    "langchain-text-splitters==1.1.2",
    "langchain-community==0.4.2",
    "langfuse==3.14.5",
    "langgraph==1.1.9",
    "langgraph-checkpoint-postgres==3.0.4",
    "mcp==1.26.0",
    "numpy==2.4.6",
    "kubernetes==35.0.0",
    "fastmcp==3.2.0",
    "langchain-aws==1.5.1",
    "psycopg[binary,pool]==3.3.4",
    "kopf==1.44.6",
    "boto3==1.43.28",
]

[dependency-groups]
test = [
    "testcontainers==4.14.2",
    "mock==5.2.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:HTTPResponse.getheaders\\(\\) is deprecated:DeprecationWarning:kubernetes.client.rest",
]
